--- a/app/templates/ui/home.html
+++ b/app/templates/ui/home.html
@@ -1,6 +1,6 @@
 {% extends 'shared/base.html' %}
 
-{% block title %}홈 - LLM Admin{% endblock %}
+{% block title %}홈 - INSERT LLM{% endblock %}
 
 {% block content %}
   <h2>{{ message }}</h2>
@@ -13,7 +13,4 @@
 {% endblock %}
 
 {% block scripts %}
-  <script>
-    console.log("홈 페이지가 로드되었습니다!");
-  </script>
 {% endblock %}
