feat: url 데이터 추출 부분 구현

--- a/app/templates/shared/base.html
+++ b/app/templates/shared/base.html
@@ -5,6 +5,7 @@
   <title>{% block title %}INSERT LLM{% endblock %}</title>
   <link rel="stylesheet" href="/static/css/reset.css">
   <link rel="stylesheet" href="/static/css/base.css">
+  {% block link %}{% endblock %}
 </head>
 <body>
   <div class="container">
@@ -12,8 +13,8 @@
       <h1 class="title">LLM 관리 패널</h1>
       <nav class="navigation">
         <a href="/home">홈</a>
-        <a href="/train">모델 학습</a>
         <a href="/extract">URL 데이터 추출</a>
+        <a href="/train">모델 학습</a>
         <a href="/compare">모델 비교</a>
       </nav>
     </header>
@@ -28,6 +29,6 @@
   </div>
 
   <script src="/static/js/base.js"></script>
-  {% block scripts %}{% endblock %}
+  {% block script %}{% endblock %}
 </body>
 </html>
