--- a/app/templates/ui/train.html
+++ b/app/templates/ui/train.html
@@ -1,9 +1,30 @@
+{% import 'macros/loading-spinner.html' as spinner %}
+
 {% extends 'shared/base.html' %}
 
 {% block title %}모델 학습 - LLM Admin{% endblock %}
 
+{% block link %}
+  <link rel="stylesheet" href="/static/css/train.css">
+{% endblock %}
+
 {% block content %}
+  <div>
+    <section>
+      <header>
+        <h2>엑셀 파일 업로드</h2>
+        <p>여기에 엑셀 파일을 업로드하고 학습을 시작할 수 있습니다.</p>          
+      </header>
+
+      <form id="upload-form" class="upload-form" method="post" action="/">
+        <label class="upload-button" for="file-input">파일 선택</label>
+        <span id="file-name" class="file-name">선택된 파일 없음</span>
+        <input type="file" id="file-input" class="file-input">
+      </form>
+    </section>
+  </div>
 {% endblock %}
 
 {% block script %}
+  <script src="/static/js/train.js"></script>
 {% endblock %}
