--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,11 +1,12 @@
 .container {
   width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
 
   display: flex;
   flex-direction: column;
 
-  overflow: hidden;
+  /* overflow: hidden; */
+  overflow-y: auto;
 }
 
 .header {
@@ -52,4 +53,29 @@
   align-items: center;
 
   flex-shrink: 0;
+}
+
+.hidden {
+  display: none !important;
+}
+
+.loading-spinner {
+  width: 32px;
+  height: 32px;
+  border: 4px solid #ccc;
+  border-top: 4px solid #333;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
