feat: 파인튜닝 구현

--- a/app/templates/ui/compare.html
+++ b/app/templates/ui/compare.html
@@ -1,9 +1,52 @@
+{% import 'macros/loading-spinner.html' as spinner %}
+
 {% extends 'shared/base.html' %}
 
-{% block title %}모델 비교 - LLM Admin{% endblock %}
+{% block title %}URL 데이터 추출 - LLM Admin{% endblock %}
+
+{% block link %}
+  <link rel="stylesheet" href="/static/css/extract.css">
+{% endblock %}
 
 {% block content %}
+  <div>
+    <div>
+      <section>
+        <header>
+          <h2>URL 데이터 추출</h2>
+          <p>여기에 URL을 입력하고 학습시킨 모델과 기존 모델의 차이를 확인할 수 있습니다.</p>          
+        </header>
+
+        <form id="extract-form" method="post" action="/">
+          <label for="url">URL:</label>
+          <input type="url" id="url" name="url" required placeholder="https://example.com">
+          <button type="submit">데이터 추출</button>
+        </form>
+      </section>
+      <section>
+        <header>
+          <h2>데이터 추출 결과</h2>
+          <p>입력한 URL을 통해 추출된 결과입니다.</p>
+        </header>
+
+        {{ spinner.spinner('loading-spinner') }}
+
+        <div id="result-container" class="result-container hidden">
+          <div>
+            <p>학습 모델 평가</p>
+            <ul id="result-trainded"></ul>
+          </div>
+
+          <div>
+            <p>기존 LLM 평가</p>
+            <ul id="result-exists"></ul>
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>
 {% endblock %}
 
 {% block script %}
+  <script src="/static/js/extract.js"></script>
 {% endblock %}
