--- a/app/templates/ui/train.html
+++ b/app/templates/ui/train.html
@@ -22,6 +22,16 @@
         <input type="file" id="file-input" class="file-input">
       </form>
     </section>
+    <section>
+      <header>
+        <h2></h2>
+        <p>여기에서 파인튜닝을 시작하고, 로그를 확인할 수 있습니다.</p>          
+      </header>
+
+      <button id="start-finetune-button">파인튜닝 시작</button>
+      <button id="stop-finetune-button">중단</button>
+      <pre id="log-output"></pre>
+    </section>
   </div>
 {% endblock %}
 
